[tool.poetry]
name = "api_to_diagram"
version = "0.1.0"
description = ""
authors = ["lbl <bolin8017@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0"
intervals = "^0.9.2"
tqdm = "^4.64.1"
Pillow = "^9.3.0"
matplotlib = "^3.6.1"
ijson = "^3.1.4"

[tool.poetry.dev-dependencies]
ipykernel = "^6.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
